# klettres

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Mainpage.dox  Makefile.am  README_packagers  TODO  acinclude.m4  aclocal.m4  configure.in  configure.in.in  klettres.appdata.xml  klettres.categories  klettres.kdevprj  klettres.kdevses  klettres.lsm  org.kde.klettres.appdata.xml  snapcraft.yaml  subdirs
data/: CMakeLists.txt  sounds.xml
data/langs/: CMakeLists.txt  cs.txt  da.txt  hu.txt  nds.txt  sk.txt
doc/: CMakeLists.txt  index.docbook
doc/en/: Makefile.am  index.docbook
icons/: CMakeLists.txt  hisc-action-klettres_grownup.svgz  hisc-action-klettres_kids.svgz
klettres/: CMakeLists.txt  Makefile.am  fontsdlg.ui  hisc-app-klettres.svgz  khsplash.cpp  khsplash.h  klettres.cpp  klettres.desktop  klettres.h  klettres.kcfg  klettresdlg.cpp  klettresdlg.h  klettresdlg.ui  klettresui.rc  klettresview.cpp  klettresview.h  klnewstuff.cpp  klnewstuff.h  lo32-app-klettres.xcf  main.cpp  pref.cpp  pref.h  pref1ui.ui  pref2ui.ui  prefs.kcfgc  prefs_addons.h  soundfactory.cpp  soundfactory.h  timer.cpp  timer.h  timerdlg.ui  timerui.ui  version.h
klettres/Danish/alpha/: Makefile.am
klettres/Danish/data/: Makefile.am  level1.txt  level3.txt
klettres/Danish/syllab/: Makefile.am
klettres/Dutch/: Makefile.am
klettres/Dutch/alpha/: Makefile.am
klettres/Dutch/data/: Makefile.am  level1.txt  level3.txt
klettres/Dutch/syllab/: Makefile.am
klettres/French/: Makefile.am
klettres/French/alpha/: Makefile.am
klettres/French/data/: Makefile.am  level3.txt
klettres/French/syllab/: Makefile.am
klettres/data/: CMakeLists.txt  Makefile.am  sounds.xml
klettres/data/langs/: CMakeLists.txt  Makefile.am  cs.txt  da.txt  de.txt  es.txt  sk.txt
klettres/en/: sounds.xml
klettres/fr/: sounds.xml
klettres/icons/: CMakeLists.txt  Makefile.am  crsc-action-klettres_desert.svgz  crsc-action-klettres_grownup.svgz  crsc-action-klettres_kids.svgz
klettres/pics/: CMakeLists.txt  Makefile.am
klettres/sons/: Makefile.am
klettres/sons2/: Makefile.am
pics/: CMakeLists.txt
po/af/: klettres.po
po/ar/: klettres.po
po/ast/: klettres.po
po/be/: klettres.po
po/bg/: klettres.po
po/bn/: klettres.po
po/br/: klettres.po
po/bs/: klettres.po
po/ca/: klettres.po
po/ca@valencia/: klettres.po
po/cs/: klettres.po
po/cy/: klettres.po
po/da/: klettres.po
po/de/: klettres.po
po/el/: klettres.po
po/en_GB/: klettres.po
po/eo/: klettres.po
po/es/: klettres.po
po/et/: klettres.po
po/eu/: klettres.po
po/fa/: klettres.po
po/fi/: klettres.po
po/fr/: klettres.po
po/ga/: klettres.po
po/gl/: klettres.po
po/gu/: klettres.po
po/he/: klettres.po
po/hi/: klettres.po
po/hne/: klettres.po
po/hr/: klettres.po
po/hu/: klettres.po
po/ia/: klettres.po
po/id/: klettres.po
scripts/: klettresl10n.rb
sounds/: CMakeLists.txt
sounds/ar/: CMakeLists.txt  sounds.xml
sounds/ar/alpha/: CMakeLists.txt
sounds/cs/: CMakeLists.txt  sounds.xml
sounds/cs/alpha/: CMakeLists.txt
sounds/cs/syllab/: CMakeLists.txt
sounds/da/: CMakeLists.txt  sounds.xml
sounds/da/alpha/: CMakeLists.txt
sounds/da/syllab/: CMakeLists.txt
sounds/de/: CMakeLists.txt  sounds.xml
sounds/de/alpha/: CMakeLists.txt
sounds/de/syllab/: CMakeLists.txt
sounds/en/: sounds.xml
sounds/en_GB/: CMakeLists.txt  sounds.xml
sounds/en_GB/alpha/: CMakeLists.txt
sounds/en_GB/syllab/: CMakeLists.txt
sounds/es/: CMakeLists.txt  sounds.xml
sounds/es/alpha/: CMakeLists.txt
sounds/es/syllab/: CMakeLists.txt
sounds/he/: CMakeLists.txt  sounds.xml
sounds/he/alpha/: CMakeLists.txt
sounds/he/syllab/: CMakeLists.txt
sounds/hu/: CMakeLists.txt  sounds.xml
sounds/hu/alpha/: CMakeLists.txt
sounds/hu/syllab/: CMakeLists.txt
sounds/id/: CMakeLists.txt  sounds.xml
sounds/id/alpha/: CMakeLists.txt
sounds/id/syllab/: CMakeLists.txt
sounds/it/: CMakeLists.txt  sounds.xml
sounds/it/alpha/: CMakeLists.txt
sounds/it/syllab/: CMakeLists.txt
sounds/lt/: CMakeLists.txt  lt.txt  sounds.xml
sounds/lt/alpha/: .directory  CMakeLists.txt
sounds/lt/syllab/: CMakeLists.txt
sounds/ml/: CMakeLists.txt  sounds.xml
sounds/ml/alpha/: CMakeLists.txt
sounds/ml/syllab/: CMakeLists.txt
sounds/nb/: CMakeLists.txt  sounds.xml
sounds/nb/alpha/: CMakeLists.txt
sounds/nds/: CMakeLists.txt  sounds.xml
sounds/nds/alpha/: CMakeLists.txt
sounds/nds/syllab/: CMakeLists.txt
sounds/nl/: CMakeLists.txt  sounds.xml
sounds/nl/alpha/: CMakeLists.txt
sounds/nl/syllab/: CMakeLists.txt
sounds/nn/: CMakeLists.txt  sounds.xml
sounds/nn/alpha/: CMakeLists.txt  U0061.opus  U0062.opus  U0063.opus  U0064.opus  U0065.opus  U0066.opus  U0067.opus  U0068.opus  U0069.opus  U006A.opus  U006B.opus  U006C.opus  U006D.opus  U006E.opus  U006F.opus  U0070.opus  U0071.opus  U0072.opus  U0073.opus  U0074.opus  U0075.opus  U0076.opus  U0077.opus  U0078.opus  U0079.opus  U007A.opus  U00E5.opus  U00E6.opus  U00F8.opus
sounds/pt_BR/: CMakeLists.txt  pt_BR.txt  sounds.xml
sounds/pt_BR/alpha/: CMakeLists.txt
sounds/pt_BR/syllab/: CMakeLists.txt
sounds/ru/: CMakeLists.txt  sounds.xml
sounds/ru/alpha/: CMakeLists.txt
sounds/ru/syllab/: CMakeLists.txt
sounds/tn/: CMakeLists.txt  sounds.xml
sounds/tn/alpha/: CMakeLists.txt
sounds/tn/syllab/: CMakeLists.txt
sounds/uk/: CMakeLists.txt  sounds.xml
sounds/uk/alpha/: CMakeLists.txt
sounds/uk/syllab/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  fontsdlg.ui  klettres.cpp  klettres.desktop  klettres.h  klettres.kcfg  klettres.knsrc  klettres.qrc  klettres.rc  klettres_debug.cpp  klettres_debug.h  klettresrc  klettresui.rc  klettresview.cpp  klettresview.h  klnewstuff.cpp  klnewstuff.h  kltheme.cpp  kltheme.h  langutils.cpp  langutils.h  main.cpp  org.kde.klettres.desktop  oxsc-apps-klettres.svgz  prefs.kcfgc  prefs_addons.h  soundfactory.cpp  soundfactory.h  timer.cpp  timer.h  timerui.ui  version.h
tests/: CMakeLists.txt  malayalamtest.cpp  malayalamtest.h
themes/: CMakeLists.txt
(+58 files in other folders)
