



########### install files ###############

install( FILES klettres_kids.jpeg klettres_grownup.png klettres_desert.png  DESTINATION  ${DATA_INSTALL_DIR}/klettres/pics )




#original Makefile.am contents follow:

#pics_DATA = klettres_kids.jpeg klettres_grownup.png klettres_desert.png
#picsdir = $(kde_datadir)/klettres/pics
