####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = klettres_back.jpeg klsplash.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/klettres/pics/
	$(INSTALL_DATA) $(srcdir)/klettres_back.jpeg $(kde_datadir)/klettres/pics/klettres_back.jpeg
	$(mkinstalldirs) $(kde_datadir)/klettres/pics/
	$(INSTALL_DATA) $(srcdir)/klsplash.png $(kde_datadir)/klettres/pics/klsplash.jpeg

uninstall-local:
	-rm -f $(kde_datadir)/klettres/pics/klettres_back.jpeg
	-rm -f $(kde_datadir)/klettres/pics/klsplash.jpeg

####### kdevelop will overwrite this part!!! (end)############
