####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = klettres_back.jpeg klsplash.png background1.png grownup.png kids.png menubar.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/klettres/pics/
	$(INSTALL_DATA) $(srcdir)/klettres_back.jpeg $(kde_datadir)/klettres/pics/klettres_back.jpeg
	$(mkinstalldirs) $(kde_datadir)/klettres/pics/
	$(INSTALL_DATA) $(srcdir)/klsplash.png $(kde_datadir)/klettres/pics/klsplash.jpeg
	$(mkinstalldirs) $(kde_datadir)/klettres/pics/
	$(INSTALL_DATA) $(srcdir)/background1.png $(kde_datadir)/klettres/pics/background1.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/48x48/apps/
	$(INSTALL_DATA) $(srcdir)/grownup.png $(kde_icondir)/hicolor/48x48/apps/grownup.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/48x48/apps/
	$(INSTALL_DATA) $(srcdir)/kids.png $(kde_icondir)/hicolor/48x48/apps/kids.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/48x48/apps/
	$(INSTALL_DATA) $(srcdir)/menubar.png $(kde_icondir)/hicolor/48x48/apps/menubar.png

uninstall-local:
	-rm -f $(kde_datadir)/klettres/pics/klettres_back.jpeg
	-rm -f $(kde_datadir)/klettres/pics/klsplash.jpeg
	-rm -f $(kde_datadir)/klettres/pics/background1.png
	-rm -f $(kde_icondir)/hicolor/48x48/apps/grownup.png
	-rm -f $(kde_icondir)/hicolor/48x48/apps/kids.png
	-rm -f $(kde_icondir)/hicolor/48x48/apps/menubar.png

####### kdevelop will overwrite this part!!! (end)############
