
pics_DATA = klettres_back.jpeg background1.png A_acute.png A_umlaut.png C_caron.png D_caron.png E_acute.png I_acute.png L_acute.png L_apos.png N_caron.png O_acute.png O_circ.png R_acute.png R_caron.png S_caron.png T_caron.png U_acute.png Z_caron.png A_circle.png A_withE.png O_barre.png 
picsdir = $(kde_datadir)/klettres/pics

icons_DATA = grownup.png kids.png menubar.png
iconsdir = $(kde_icondir)/hicolor/48x48/apps

