####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = a[0].wav a[10].wav a[11].wav a[12].wav a[13].wav a[14].wav a[15].wav a[17].wav a[18].wav a[19].wav a[1].wav a[20].wav a[21].wav a[22].wav a[23].wav a[24].wav a[25].wav a[2].wav a[3].wav a[4].wav a[5].wav a[6].wav a[7].wav a[8].wav a[9].wav a[16].wav 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[0].wav $(kde_datadir)/klettres/sons/a[0].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[10].wav $(kde_datadir)/klettres/sons/a[10].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[11].wav $(kde_datadir)/klettres/sons/a[11].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[12].wav $(kde_datadir)/klettres/sons/a[12].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[13].wav $(kde_datadir)/klettres/sons/a[13].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[14].wav $(kde_datadir)/klettres/sons/a[14].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[15].wav $(kde_datadir)/klettres/sons/a[15].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[17].wav $(kde_datadir)/klettres/sons/a[17].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[18].wav $(kde_datadir)/klettres/sons/a[18].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[19].wav $(kde_datadir)/klettres/sons/a[19].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[1].wav $(kde_datadir)/klettres/sons/a[1].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[20].wav $(kde_datadir)/klettres/sons/a[20].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[21].wav $(kde_datadir)/klettres/sons/a[21].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[22].wav $(kde_datadir)/klettres/sons/a[22].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[23].wav $(kde_datadir)/klettres/sons/a[23].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[24].wav $(kde_datadir)/klettres/sons/a[24].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[25].wav $(kde_datadir)/klettres/sons/a[25].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[2].wav $(kde_datadir)/klettres/sons/a[2].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[3].wav $(kde_datadir)/klettres/sons/a[3].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[4].wav $(kde_datadir)/klettres/sons/a[4].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[5].wav $(kde_datadir)/klettres/sons/a[5].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[6].wav $(kde_datadir)/klettres/sons/a[6].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[7].wav $(kde_datadir)/klettres/sons/a[7].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[8].wav $(kde_datadir)/klettres/sons/a[8].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[9].wav $(kde_datadir)/klettres/sons/a[9].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons/
	$(INSTALL_DATA) $(srcdir)/a[16].wav $(kde_datadir)/klettres/sons/a[16].wav

uninstall-local:
	-rm -f $(kde_datadir)/klettres/sons/a[0].wav
	-rm -f $(kde_datadir)/klettres/sons/a[10].wav
	-rm -f $(kde_datadir)/klettres/sons/a[11].wav
	-rm -f $(kde_datadir)/klettres/sons/a[12].wav
	-rm -f $(kde_datadir)/klettres/sons/a[13].wav
	-rm -f $(kde_datadir)/klettres/sons/a[14].wav
	-rm -f $(kde_datadir)/klettres/sons/a[15].wav
	-rm -f $(kde_datadir)/klettres/sons/a[17].wav
	-rm -f $(kde_datadir)/klettres/sons/a[18].wav
	-rm -f $(kde_datadir)/klettres/sons/a[19].wav
	-rm -f $(kde_datadir)/klettres/sons/a[1].wav
	-rm -f $(kde_datadir)/klettres/sons/a[20].wav
	-rm -f $(kde_datadir)/klettres/sons/a[21].wav
	-rm -f $(kde_datadir)/klettres/sons/a[22].wav
	-rm -f $(kde_datadir)/klettres/sons/a[23].wav
	-rm -f $(kde_datadir)/klettres/sons/a[24].wav
	-rm -f $(kde_datadir)/klettres/sons/a[25].wav
	-rm -f $(kde_datadir)/klettres/sons/a[2].wav
	-rm -f $(kde_datadir)/klettres/sons/a[3].wav
	-rm -f $(kde_datadir)/klettres/sons/a[4].wav
	-rm -f $(kde_datadir)/klettres/sons/a[5].wav
	-rm -f $(kde_datadir)/klettres/sons/a[6].wav
	-rm -f $(kde_datadir)/klettres/sons/a[7].wav
	-rm -f $(kde_datadir)/klettres/sons/a[8].wav
	-rm -f $(kde_datadir)/klettres/sons/a[9].wav
	-rm -f $(kde_datadir)/klettres/sons/a[16].wav

####### kdevelop will overwrite this part!!! (end)############
