####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = ad[0].wav ad[10].wav ad[11].wav ad[12].wav ad[13].wav ad[14].wav ad[15].wav ad[16].wav ad[17].wav ad[18].wav ad[19].wav ad[1].wav ad[20].wav ad[21].wav ad[22].wav ad[23].wav ad[24].wav ad[25].wav ad[26].wav ad[27].wav ad[2].wav ad[3].wav ad[4].wav ad[5].wav ad[6].wav ad[7].wav ad[8].wav ad[9].wav 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[0].wav $(kde_datadir)/klettres/sons2/ad[0].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[10].wav $(kde_datadir)/klettres/sons2/ad[10].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[11].wav $(kde_datadir)/klettres/sons2/ad[11].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[12].wav $(kde_datadir)/klettres/sons2/ad[12].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[13].wav $(kde_datadir)/klettres/sons2/ad[13].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[14].wav $(kde_datadir)/klettres/sons2/ad[14].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[15].wav $(kde_datadir)/klettres/sons2/ad[15].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[16].wav $(kde_datadir)/klettres/sons2/ad[16].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[17].wav $(kde_datadir)/klettres/sons2/ad[17].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[18].wav $(kde_datadir)/klettres/sons2/ad[18].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[19].wav $(kde_datadir)/klettres/sons2/ad[19].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[1].wav $(kde_datadir)/klettres/sons2/ad[1].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[20].wav $(kde_datadir)/klettres/sons2/ad[20].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[21].wav $(kde_datadir)/klettres/sons2/ad[21].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[22].wav $(kde_datadir)/klettres/sons2/ad[22].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[23].wav $(kde_datadir)/klettres/sons2/ad[23].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[24].wav $(kde_datadir)/klettres/sons2/ad[24].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[25].wav $(kde_datadir)/klettres/sons2/ad[25].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[26].wav $(kde_datadir)/klettres/sons2/ad[26].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[27].wav $(kde_datadir)/klettres/sons2/ad[27].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[2].wav $(kde_datadir)/klettres/sons2/ad[2].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[3].wav $(kde_datadir)/klettres/sons2/ad[3].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[4].wav $(kde_datadir)/klettres/sons2/ad[4].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[5].wav $(kde_datadir)/klettres/sons2/ad[5].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[6].wav $(kde_datadir)/klettres/sons2/ad[6].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[7].wav $(kde_datadir)/klettres/sons2/ad[7].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[8].wav $(kde_datadir)/klettres/sons2/ad[8].wav
	$(mkinstalldirs) $(kde_datadir)/klettres/sons2/
	$(INSTALL_DATA) $(srcdir)/ad[9].wav $(kde_datadir)/klettres/sons2/ad[9].wav

uninstall-local:
	-rm -f $(kde_datadir)/klettres/sons2/ad[0].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[10].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[11].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[12].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[13].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[14].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[15].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[16].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[17].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[18].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[19].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[1].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[20].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[21].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[22].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[23].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[24].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[25].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[26].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[27].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[2].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[3].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[4].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[5].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[6].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[7].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[8].wav
	-rm -f $(kde_datadir)/klettres/sons2/ad[9].wav

####### kdevelop will overwrite this part!!! (end)############
