
sonsdir = $(kde_datadir)/klettres/sons2
sons_DATA = ad-0.wav ad-10.wav ad-11.wav ad-12.wav ad-13.wav ad-14.wav ad-15.wav ad-16.wav ad-17.wav ad-18.wav ad-19.wav ad-1.wav ad-20.wav ad-21.wav ad-22.wav ad-23.wav ad-24.wav ad-25.wav ad-26.wav ad-27.wav ad-2.wav ad-3.wav ad-4.wav ad-5.wav ad-6.wav ad-7.wav ad-8.wav ad-9.wav

